# Object-Renderer-GLFW

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
assets/scenes/: imgui.ini  scene.yaml
assets/scenes/Demo Scenes/: Demo 1.yaml  Demo 2.yaml  Demo 3.yaml  New Scene Default.yaml  imgui.ini
cmake/: AddENTT.cmake  AddGLFW.cmake  AddGLM.cmake  AddYAML.cmake
shaders/: default.frag  default.vert  lighting.frag  lighting.vert  outline.frag  outline.vert
src/: application.cpp  camera.cpp  camera.hpp  entityManagementSystem.cpp  entityManagementSystem.hpp  globals.cpp  globals.hpp  main.cpp  mesh.cpp  mesh.hpp  meshHandler.cpp  meshHandler.hpp  objectLoader.cpp  objectLoader.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp
src/Camera/: camera.cpp  camera.hpp
src/Component_Functions/: camera.cpp  camera.h  transform.cpp  transform.h  transform.hpp
src/Core/: application.cpp  application.h  application.hpp  globals.cpp  globals.hpp  objectLoader.cpp  objectLoader.h  objectLoader.hpp  renderer.cpp  renderer.h  renderer.hpp
src/Entity/: components.cpp  components.h  components.hpp  entity.cpp  entity.h  entity.hpp  entityManagementSystem.cpp  entityManagementSystem.hpp  mesh.cpp  mesh.h  mesh.hpp  meshHandler.cpp  meshHandler.h  meshHandler.hpp
src/Scene/: scene.cpp  scene.h  scene.hpp
src/Shader/: shader.cpp  shader.hpp
src/UI/: DefaultPanelLayout.ini  ui.cpp  ui.h  ui.hpp
